--- a/index.html
+++ b/index.html
@@ -49,26 +49,36 @@
     .logo-grid {
       margin-top: 30px;
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
+      grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
       gap: 10px;
-      max-width: 80vw;
+      max-width: 90vw;
       margin-left: auto;
       margin-right: auto;
     }
     .logo-grid-item {
       position: relative;
-      width: 60px;
-      height: 60px;
+      width: 80px;
+      height: 100px;
       background: white;
       border: 1px solid #ccc;
       border-radius: 8px;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
+      padding: 5px;
     }
     .logo-grid-item img {
-      max-width: 90%;
-      max-height: 90%;
+      max-width: 60px;
+      max-height: 60px;
+    }
+    .logo-name {
+      font-size: 10px;
+      margin-top: 5px;
+      overflow: hidden;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      max-width: 100%;
     }
     .remove-btn {
       position: absolute;
@@ -87,7 +97,7 @@
     .drop-zone {
       border: 2px dashed #999;
       padding: 10px;
-      min-height: 80px;
+      min-height: 100px;
       margin-top: 20px;
       background: #fff;
     }
@@ -142,7 +152,7 @@
     }
 
     function generateLogoURL(companyName) {
-      const domain = companyName.toLowerCase().replace(/\\s+/g, '') + ".com";
+      const domain = companyName.toLowerCase().replace(/\s+/g, '') + ".com";
       return `https://logo.clearbit.com/${domain}`;
     }
 
@@ -173,6 +183,10 @@
         this.src = 'https://via.placeholder.com/60?text=?';
       };
 
+      const label = document.createElement('div');
+      label.className = 'logo-name';
+      label.textContent = name;
+
       const removeBtn = document.createElement('button');
       removeBtn.innerText = '×';
       removeBtn.className = 'remove-btn';
@@ -187,6 +201,7 @@
 
       item.appendChild(removeBtn);
       item.appendChild(img);
+      item.appendChild(label);
       return item;
     }
 
