--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     .logo-grid-item {
       position: relative;
       width: 80px;
-      height: 100px;
+      height: 110px;
       background: white;
       border: 1px solid #ccc;
       border-radius: 8px;
@@ -69,16 +69,18 @@
       padding: 5px;
     }
     .logo-grid-item img {
-      max-width: 60px;
-      max-height: 60px;
+      width: 60px;
+      height: 60px;
+      object-fit: contain;
+      background: #fff;
     }
     .logo-name {
-      font-size: 10px;
+      font-size: 11px;
       margin-top: 5px;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
       max-width: 100%;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
     }
     .remove-btn {
       position: absolute;
@@ -97,7 +99,7 @@
     .drop-zone {
       border: 2px dashed #999;
       padding: 10px;
-      min-height: 100px;
+      min-height: 110px;
       margin-top: 20px;
       background: #fff;
     }
@@ -180,7 +182,7 @@
       img.src = logoUrl;
       img.alt = name;
       img.onerror = function () {
-        this.src = 'https://via.placeholder.com/60?text=?';
+        this.src = 'https://via.placeholder.com/60?text=' + encodeURIComponent(name[0].toUpperCase());
       };
 
       const label = document.createElement('div');
